# rocom-capture

./: .gitignore  AGENTS.md  HISTORY.md  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: build.yml
cmd/rocom-capture/: main.go
docs/: architecture.md  audio.md  data.md  protocol.md
internal/capture/: capture.go  capture_linux.go
internal/gamedata/: gamedata.go  icons.go  map.go  pet.go
internal/gamedata/data/: names.json
internal/gcp/: gcp.go
internal/pb/: com_base_types.pb.go  com_battle_enum.pb.go  com_monster.pb.go  com_pet.pb.go  com_pet_skill.pb.go  com_pet_team.pb.go  com_season.pb.go  rpc_options.pb.go  xls_enum.pb.go
internal/pet/: model.go  opcodes.go  parse.go  parse_box.go  parse_login.go  parse_pet.go  parse_team.go
internal/pipeline/: pets.go  pipeline.go  position.go  stars.go
internal/scene/: parse.go  parse_test.go  star.go
internal/server/: api_map.go  api_pets.go  hub.go  server.go  stream.go
internal/server/web/: index.html
internal/store/: account.go  event.go  location.go  pet.go  query.go  session.go  star.go  store.go
internal/wire/: wire.go
proto/: com_base_types.proto  com_monster.proto  com_pet.proto  com_pet_skill.proto  rpc_options.proto  xls_enum.proto
scripts/: capture.sh  decompile_luac.sh  dump_bin.py  fix_proto.py  gen_bigmap.py  gen_gamedata.py  gen_icons.py  gen_images.py  gen_proto.py  gen_proto.sh  unpack.sh
scripts/unpack/: Program.cs
web/: package-lock.json  package.json
web/src/: App.jsx  api.js  constants.js  context.js  index.css  main.jsx
web/src/components/: PetDetailModal.jsx  (+5 more)
(+57 files in other folders)
